--- a/Word4DayV3/WebFolder/views/reports.waComponent/reports.html
+++ b/Word4DayV3/WebFolder/views/reports.waComponent/reports.html
@@ -2,5 +2,6 @@
     <meta name="generator" content="Wakanda GUIDesigner"/>
     <meta name="WAF.catalog" content="WordGroup,WordGroups"/>
     <meta data-type="dataSource" data-lib="WAF" data-source="WordGroups" data-source-type="dataClass" data-dataType="string" data-autoLoad="true" name="WAF.config.datasources" data-scope="local" data-id="{id}wordGroups" content="wordGroups"/>
-    <meta data-type="dataSource" data-lib="WAF" data-source="WordGroup" data-source-type="dataClass" data-dataType="string" data-autoLoad="true" name="WAF.config.datasources" data-scope="local" data-id="{id}wordGroup" content="wordGroup"/>	<div id="{id}container1" data-type="container" data-lib="WAF" class="waf-widget waf-container waf-container-level-0 waf-level-0" data-label="" data-label-position="top" data-constraint-left="true" data-constraint-top="true"></div>
+    <meta data-type="dataSource" data-lib="WAF" data-source="WordGroup" data-source-type="dataClass" data-dataType="string" data-autoLoad="true" name="WAF.config.datasources" data-scope="local" data-id="{id}wordGroup" content="wordGroup"/>	<div id="{id}container1" data-type="container" data-lib="WAF" class="waf-widget waf-container waf-container-level-0 waf-level-0" data-label="Reports" data-label-position="top" data-constraint-left="true" data-constraint-top="true"></div>
+		<label id="{id}label1" data-type="label" data-lib="WAF" for="{id}container1" data-valign="top" data-margin="5" class="waf-widget waf-label waf-label-container" data-constraint-left="true" data-constraint-top="true">Reports</label>
 	</section>
