--- a/Word4DayV3/WebFolder/views/curr.waComponent/curr.html
+++ b/Word4DayV3/WebFolder/views/curr.waComponent/curr.html
@@ -1,4 +1,44 @@
-﻿<!DOCTYPE html>
-<section>
-  <meta name="generator" content="Wakanda GUIDesigner"/>
-</section>
+﻿<!DOCTYPE html><section data-group="[['accordion1','richText1','container3','container4','container2','richText2','container6','container7','container5','richText3','container9','container10','container8']]">
+    <meta name="generator" content="Wakanda GUIDesigner"/>
+    <meta name="WAF.catalog" content="SetsWordCurr"/>
+    <meta data-type="dataSource" data-lib="WAF" data-source="SetsWordCurr" data-source-type="dataClass" data-dataType="string" data-autoLoad="true" name="WAF.config.datasources" data-scope="local" data-id="{id}setsWordCurr" content="setsWordCurr"/>	<div id="{id}container1" data-type="container" data-lib="WAF" data-label-position="top" data-label="" data-constraint-top="true" data-constraint-right="true" data-constraint-left="true" class="waf-widget waf-container waf-container-level-0 waf-level-0">
+ 			<div id="{id}accordion1" data-type="accordion" data-linked-tag="{id}container2,{id}container5,{id}container8" data-lib="WAF" data-header-height="40" data-expand-several="true" data-duration="400" data-context="['disallowDropAndBind']" data-content-height="350" data-constraint-top="true" data-constraint-right="false" data-constraint-left="true" data-constraint-bottom="false" class="waf-widget waf-accordion ">
+	 	 	<div id="{id}container2" data-type="container" data-lib="WAF" data-label-position="top" data-label="" data-context="['protected','allowRemove']" data-constraint-top="true" data-constraint-right="true" data-constraint-left="true" data-constraint-bottom="false" class="waf-widget waf-container waf-container-level-1 waf-level-1 accordion-section waf-state-expanded">
+	 	 	 	<div id="{id}container3" data-type="container" data-lib="WAF" data-label-position="top" data-label="" data-context="['protected']" data-constraint-top="true" data-constraint-right="true" data-constraint-left="true" data-constraint-bottom="false" class="waf-widget waf-container waf-container-level-2 waf-level-2 accordion-header waf-accordion-header waf-state-expanded">
+	 	 	 	 	<div id="{id}richText1" data-type="richText" data-target="_blank" data-plainText="true" data-overflow="Hidden" data-lib="WAF" data-label-position="left" data-label="" data-constraint-top="true" data-constraint-right="false" data-constraint-left="true" data-constraint-bottom="false" data-autoWidth="true" class="waf-widget waf-richText waf-accordion-title waf-state-expanded">Sequence</div>
+ 	 	 	 	</div>
+ 	 	 		<div id="{id}container4" data-type="container" data-lib="WAF" data-label-position="top" data-label="" data-context="['protected','allowDrop']" data-constraint-top="true" data-constraint-right="true" data-constraint-left="true" data-constraint-bottom="true" class="waf-widget waf-container waf-container-level-2 waf-level-2 accordion-content waf-accordion-content waf-state-expanded"></div>
+ 	 	 	</div>
+ 	 		<div id="{id}container5" data-type="container" data-lib="WAF" data-label-position="top" data-label="" data-context="['protected','allowRemove']" data-constraint-top="true" data-constraint-right="true" data-constraint-left="true" data-constraint-bottom="false" class="waf-widget waf-container waf-container-level-1 waf-level-1 accordion-section waf-state-collapsed">
+	 	 	 	<div id="{id}container6" data-type="container" data-lib="WAF" data-label-position="top" data-label="" data-context="['protected']" data-constraint-top="true" data-constraint-right="true" data-constraint-left="true" data-constraint-bottom="false" class="waf-widget waf-container waf-container-level-2 waf-level-2 accordion-header waf-accordion-header waf-state-collapsed">
+	 	 	 	 	<div id="{id}richText2" data-type="richText" data-target="_blank" data-plainText="true" data-overflow="Hidden" data-lib="WAF" data-label-position="left" data-label="" data-constraint-top="true" data-constraint-right="false" data-constraint-left="true" data-constraint-bottom="false" data-autoWidth="true" class="waf-widget waf-richText waf-accordion-title waf-state-expanded">Schedule</div>
+ 	 	 	 	</div>
+ 	 	 		<div id="{id}container7" data-type="container" data-lib="WAF" data-label-position="top" data-label="" data-context="['protected','allowDrop']" data-constraint-top="true" data-constraint-right="true" data-constraint-left="true" data-constraint-bottom="true" class="waf-widget waf-container waf-container-level-2 waf-level-2 accordion-content waf-accordion-content waf-state-collapsed"></div>
+ 	 	 	</div>
+ 	 		<div id="{id}container8" data-type="container" data-lib="WAF" data-label-position="top" data-label="" data-context="['protected','allowRemove']" data-constraint-top="true" data-constraint-right="true" data-constraint-left="true" data-constraint-bottom="false" class="waf-widget waf-container waf-container-level-1 waf-level-1 accordion-section waf-state-collapsed">
+	 	 	 	<div id="{id}container9" data-type="container" data-lib="WAF" data-label-position="top" data-label="" data-context="['protected']" data-constraint-top="true" data-constraint-right="true" data-constraint-left="true" data-constraint-bottom="false" class="waf-widget waf-container waf-container-level-2 waf-level-2 accordion-header waf-accordion-header waf-state-collapsed">
+	 	 	 	 	<div id="{id}richText3" data-type="richText" data-target="_blank" data-plainText="true" data-overflow="Hidden" data-lib="WAF" data-label-position="left" data-label="" data-constraint-top="true" data-constraint-right="false" data-constraint-left="true" data-constraint-bottom="false" data-autoWidth="true" class="waf-widget waf-richText waf-accordion-title waf-state-collapsed">Options</div>
+ 	 	 	 	</div>
+ 	 	 		<div id="{id}container10" data-type="container" data-lib="WAF" data-label-position="top" data-label="" data-context="['protected','allowDrop']" data-constraint-top="true" data-constraint-right="true" data-constraint-left="true" data-constraint-bottom="true" class="waf-widget waf-container waf-container-level-2 waf-level-2 accordion-content waf-accordion-content waf-state-collapsed"></div>
+ 	 	 	</div>
+ 	 	</div>
+ 		<div id="{id}dataGrid2" data-type="dataGrid" data-lib="WAF" data-binding="{id}setsWordCurr" class="waf-widget waf-dataGrid " data-label="" data-label-position="top" data-selection-mode="single" data-display-error="true" data-footer-text="item(s)" data-column="[{'sourceAttID':'curName','colID':'curName','width':'150','title':'Campaign'},{'sourceAttID':'curKeyword','colID':'curKeyword','width':'150','title':'Keyword%28opt%29'}]" data-constraint-left="true" data-constraint-top="true" data-constraint-bottom="false" data-constraint-right="false" data-footer-hide="true"></div>
+ 		<div id="{id}richText4" data-type="richText" data-lib="WAF" class="waf-widget waf-richText " data-autoWidth="true" data-label="" data-label-position="left" data-target="_blank" data-overflow="Hidden" data-plainText="true" data-constraint-left="true" data-constraint-top="true" data-constraint-bottom="false" data-constraint-right="false"></div>
+ 	</div>
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	</section>
