--- a/Word4DayV3/WebFolder/views/reports.waComponent/reports.html
+++ b/Word4DayV3/WebFolder/views/reports.waComponent/reports.html
@@ -1,7 +1,66 @@
-﻿<!DOCTYPE html><section data-group="[]">
+﻿<!DOCTYPE html><section data-group="[['accordion1','richText1','container3','container4','container2','richText2','container6','container7','container5','richText3','container9','container10','container8']]">
     <meta name="generator" content="Wakanda GUIDesigner"/>
-    <meta name="WAF.catalog" content="WordGroup,WordGroups"/>
-    <meta data-type="dataSource" data-lib="WAF" data-source="WordGroups" data-source-type="dataClass" data-dataType="string" data-autoLoad="true" name="WAF.config.datasources" data-scope="local" data-id="{id}wordGroups" content="wordGroups"/>
-    <meta data-type="dataSource" data-lib="WAF" data-source="WordGroup" data-source-type="dataClass" data-dataType="string" data-autoLoad="true" name="WAF.config.datasources" data-scope="local" data-id="{id}wordGroup" content="wordGroup"/>	<div id="{id}container1" data-type="container" data-lib="WAF" class="waf-widget waf-container waf-container-level-0 waf-level-0" data-label="Reports" data-label-position="top" data-constraint-left="true" data-constraint-top="true"></div>
-		<label id="{id}label1" data-type="label" data-lib="WAF" for="{id}container1" data-valign="top" data-margin="5" class="waf-widget waf-label waf-label-container" data-constraint-left="true" data-constraint-top="true">Reports</label>
+    <meta name="WAF.catalog" content="WordGroups,WordGroup"/>
+    <meta name="WAF.config.datasources" data-type="dataSource" data-source-type="dataClass" data-source="WordGroups" data-scope="local" data-lib="WAF" data-id="{id}wordGroups" data-dataType="string" data-autoLoad="true" content="wordGroups"/>
+    <meta name="WAF.config.datasources" data-type="dataSource" data-source-type="dataClass" data-source="WordGroup" data-scope="local" data-lib="WAF" data-id="{id}wordGroup" data-dataType="string" data-autoLoad="true" content="wordGroup"/>
+    
+    <div id="{id}container1" data-type="container" data-lib="WAF" data-label-position="top" data-label="Reports" data-constraint-top="true" data-constraint-right="true" data-constraint-left="true" class="waf-widget waf-container waf-container-level-0 waf-level-0">
+	 	<div id="{id}accordion1" data-type="accordion" data-linked-tag="{id}container2,{id}container5,{id}container8" data-lib="WAF" data-header-height="40" data-expand-several="true" data-duration="400" data-context="['disallowDropAndBind']" data-content-height="377" data-constraint-top="true" data-constraint-right="false" data-constraint-left="true" data-constraint-bottom="false" class="waf-widget waf-accordion ">
+	 	 	<div id="{id}container2" data-type="container" data-lib="WAF" data-label-position="top" data-label="" data-context="['protected','allowRemove']" data-constraint-top="true" data-constraint-right="true" data-constraint-left="true" data-constraint-bottom="false" class="waf-widget waf-container waf-container-level-1 waf-level-1 accordion-section waf-state-expanded">
+	 	 	 	<div id="{id}container3" data-type="container" data-lib="WAF" data-label-position="top" data-label="" data-context="['protected']" data-constraint-top="true" data-constraint-right="true" data-constraint-left="true" data-constraint-bottom="false" class="waf-widget waf-container waf-container-level-2 waf-level-2 accordion-header waf-accordion-header waf-state-expanded">
+	 	 	 	 	<div id="{id}richText1" data-type="richText" data-target="_blank" data-plainText="true" data-overflow="Hidden" data-lib="WAF" data-label-position="left" data-label="" data-constraint-top="true" data-constraint-right="false" data-constraint-left="true" data-constraint-bottom="false" data-autoWidth="true" class="waf-widget waf-richText waf-accordion-title waf-state-expanded">Student Activity</div>
+ 	 	 	 	</div>
+ 	 	 		<div id="{id}container4" data-type="container" data-lib="WAF" data-label-position="top" data-label="" data-context="['protected','allowDrop']" data-constraint-top="true" data-constraint-right="true" data-constraint-left="true" data-constraint-bottom="true" class="waf-widget waf-container waf-container-level-2 waf-level-2 accordion-content waf-accordion-content waf-state-expanded">
+	 	 	 	 	<div id="{id}combobox1" data-type="combobox" data-lib="WAF" class="waf-widget waf-combobox " data-label="Group" data-label-position="left" data-autoDispatch="true" data-editable="true" data-limit="20" data-constraint-left="true" data-constraint-top="true" data-constraint-bottom="false" data-constraint-right="false"><select></select></div>
+ 	 	 	 		<label id="{id}label2" data-type="label" data-lib="WAF" for="{id}combobox1" data-valign="middle" data-margin="5" class="waf-widget waf-label waf-label-combobox" data-constraint-left="true" data-constraint-top="true">Group</label>
+ 	 	 	 		<div id="{id}combobox2" data-type="combobox" data-lib="WAF" class="waf-widget waf-combobox " data-label="Student" data-label-position="left" data-autoDispatch="true" data-editable="true" data-limit="20" data-constraint-left="true" data-constraint-top="true" data-constraint-bottom="false" data-constraint-right="false"><select></select></div>
+ 	 	 	 		<label id="{id}label3" data-type="label" data-lib="WAF" for="{id}combobox2" data-valign="middle" data-margin="5" class="waf-widget waf-label waf-label-combobox" data-constraint-left="true" data-constraint-top="true">Student</label>
+ 	 	 	 		<div id="{id}calendar1" data-type="calendar" data-lib="WAF" data-label="" data-label-position="left" data-start="1" data-format="dd/mm/yy" data-save="true" class="waf-widget waf-calendar " data-constraint-left="true" data-constraint-top="true" data-constraint-bottom="false" data-constraint-right="false"></div>
+ 	 	 	 			<input id="{id}textField1" data-type="textField" data-lib="WAF" type="text" class="waf-widget waf-textField " data-label="From" data-label-position="left" data-multiline="false" data-readOnly="false" data-password="false" data-datapicker-on="true" data-datapicker-icon-only="false" data-constraint-left="true" data-constraint-top="true" data-constraint-bottom="false" data-constraint-right="false" value="(30 Days Ago)"/>
+ 	 	 	 		<label id="{id}label5" data-type="label" data-lib="WAF" for="{id}textField1" data-valign="middle" data-margin="5" class="waf-widget waf-label waf-label-textField" data-constraint-left="true" data-constraint-top="true">From</label>
+ 	 	 	 		<input id="{id}textField2" data-type="textField" data-lib="WAF" type="text" class="waf-widget waf-textField " data-label="To" data-label-position="left" data-multiline="false" data-readOnly="false" data-password="false" data-datapicker-on="true" data-datapicker-icon-only="false" data-constraint-left="true" data-constraint-top="true" data-constraint-bottom="false" data-constraint-right="false" value="(Today)"/>
+ 	 	 	 		<label id="{id}label6" data-type="label" data-lib="WAF" for="{id}textField2" data-valign="middle" data-margin="5" class="waf-widget waf-label waf-label-textField" data-constraint-left="true" data-constraint-top="true">To</label>
+ 	 	 	 	</div>
+ 	 	 	</div>
+ 	 		<div id="{id}container5" data-type="container" data-lib="WAF" data-label-position="top" data-label="" data-context="['protected','allowRemove']" data-constraint-top="true" data-constraint-right="true" data-constraint-left="true" data-constraint-bottom="false" class="waf-widget waf-container waf-container-level-1 waf-level-1 accordion-section waf-state-collapsed">
+	 	 	 	<div id="{id}container6" data-type="container" data-lib="WAF" data-label-position="top" data-label="" data-context="['protected']" data-constraint-top="true" data-constraint-right="true" data-constraint-left="true" data-constraint-bottom="false" class="waf-widget waf-container waf-container-level-2 waf-level-2 accordion-header waf-accordion-header waf-state-collapsed">
+	 	 	 	 	<div id="{id}richText2" data-type="richText" data-target="_blank" data-plainText="true" data-overflow="Hidden" data-lib="WAF" data-label-position="left" data-label="" data-constraint-top="true" data-constraint-right="false" data-constraint-left="true" data-constraint-bottom="false" data-autoWidth="true" class="waf-widget waf-richText waf-accordion-title waf-state-expanded">Curricula</div>
+ 	 	 	 	</div>
+ 	 	 		<div id="{id}container7" data-type="container" data-lib="WAF" data-label-position="top" data-label="" data-context="['protected','allowDrop']" data-constraint-top="true" data-constraint-right="true" data-constraint-left="true" data-constraint-bottom="true" class="waf-widget waf-container waf-container-level-2 waf-level-2 accordion-content waf-accordion-content waf-state-collapsed"></div>
+ 	 	 	</div>
+ 	 		<div id="{id}container8" data-type="container" data-lib="WAF" data-label-position="top" data-label="" data-context="['protected','allowRemove']" data-constraint-top="true" data-constraint-right="true" data-constraint-left="true" data-constraint-bottom="false" class="waf-widget waf-container waf-container-level-1 waf-level-1 accordion-section waf-state-collapsed">
+	 	 	 	<div id="{id}container9" data-type="container" data-lib="WAF" data-label-position="top" data-label="" data-context="['protected']" data-constraint-top="true" data-constraint-right="true" data-constraint-left="true" data-constraint-bottom="false" class="waf-widget waf-container waf-container-level-2 waf-level-2 accordion-header waf-accordion-header waf-state-collapsed">
+	 	 	 	 	<div id="{id}richText3" data-type="richText" data-target="_blank" data-plainText="true" data-overflow="Hidden" data-lib="WAF" data-label-position="left" data-label="" data-constraint-top="true" data-constraint-right="false" data-constraint-left="true" data-constraint-bottom="false" data-autoWidth="true" class="waf-widget waf-richText waf-accordion-title waf-state-expanded">Who knows</div>
+ 	 	 	 	</div>
+ 	 	 		<div id="{id}container10" data-type="container" data-lib="WAF" data-label-position="top" data-label="" data-context="['protected','allowDrop']" data-constraint-top="true" data-constraint-right="true" data-constraint-left="true" data-constraint-bottom="true" class="waf-widget waf-container waf-container-level-2 waf-level-2 accordion-content waf-accordion-content waf-state-collapsed"></div>
+ 	 	 	</div>
+ 	 	</div>
+ 		<div id="{id}richText4" data-type="richText" data-lib="WAF" class="waf-widget waf-richText " data-autoWidth="false" data-label="" data-label-position="left" data-target="_blank" data-overflow="Hidden" data-plainText="true" data-constraint-left="true" data-constraint-top="true" data-constraint-bottom="false" data-constraint-right="false">Select a Student or Group</div>
+ 	
+ 	
+ 		<button id="{id}repStuSubmit" data-type="button" data-lib="WAF" class="waf-widget waf-button " data-action="simple" data-target="_blank" data-constraint-left="true" data-constraint-top="true" data-constraint-bottom="false" data-constraint-right="false" data-text="Generate"></button>
+ 	
+ 	
+ 			
+ 	
+ 		
+ 	
+ 		<button id="{id}setFromStu" data-type="button" data-lib="WAF" class="waf-widget waf-button " data-action="simple" data-target="_blank" data-constraint-left="true" data-constraint-top="true" data-constraint-bottom="false" data-constraint-right="false" data-text="Set From"></button>
+ 		<button id="{id}setToStu" data-type="button" data-lib="WAF" class="waf-widget waf-button " data-action="simple" data-target="_blank" data-constraint-left="true" data-constraint-top="true" data-constraint-bottom="false" data-constraint-right="false" data-text="Set To"></button>
+ 	</div>
+		<label id="{id}label1" for="{id}container1" data-valign="top" data-type="label" data-margin="5" data-lib="WAF" data-constraint-top="true" data-constraint-right="true" data-constraint-left="true" class="waf-widget waf-label waf-label-container">Reports</label>
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
 	</section>
