--- a/Word4DayV3/WebFolder/views/wordgroups.waComponent/wordgroups.html
+++ b/Word4DayV3/WebFolder/views/wordgroups.waComponent/wordgroups.html
@@ -6,7 +6,8 @@
     
     
     
-    <div id="{id}wordgroupContainer" data-type="container" data-lib="WAF" data-label-position="top" data-label="" data-constraint-top="true" data-constraint-left="true" class="waf-widget waf-container waf-container-level-0 waf-level-0" data-constraint-right="true">
+    
+    <div id="{id}wordgroupContainer" data-type="container" data-lib="WAF" data-label-position="top" data-label="" data-constraint-top="true" data-constraint-right="true" data-constraint-left="true" class="waf-widget waf-container waf-container-level-0 waf-level-0">
  		
  		
  		<span id="{id}iconAddWord" data-type="icon" data-lib="WAF" data-label-position="left" data-label="Add " data-image-state1="/images/014.png" data-icon-type="images" data-constraint-top="true" data-constraint-right="false" data-constraint-left="true" data-constraint-bottom="false" class="waf-widget waf-icon "><img src="/images/014.png" class="waf-icon-state1"/></span>
@@ -54,7 +55,7 @@
  	 		<label id="{id}label6" for="{id}textField6" data-valign="middle" data-type="label" data-margin="5" data-lib="WAF" data-constraint-top="true" data-constraint-right="false" data-constraint-left="true" data-constraint-bottom="false" class="waf-widget waf-label waf-label-textField">Use 3</label>
  	 		<div id="{id}richText1" data-type="richText" data-target="_blank" data-plainText="true" data-overflow="Hidden" data-lib="WAF" data-label-position="left" data-label="" data-constraint-top="true" data-constraint-right="false" data-constraint-left="true" data-constraint-bottom="false" data-autoWidth="false" class="waf-widget waf-richText ">Example </div>
  	 	</div>
- 	 		<div id="{id}container5" data-type="container" data-lib="WAF" data-label-position="top" data-label="" data-constraint-top="true" data-constraint-right="false" data-constraint-left="true" data-constraint-bottom="false" class="waf-widget waf-container waf-container-level-1 waf-level-1">
+ 	 		<div id="{id}container5" data-type="container" data-lib="WAF" data-label-position="top" data-label="" data-constraint-top="true" data-constraint-right="false" data-constraint-left="true" data-constraint-bottom="false" class="waf-widget waf-container waf-container-level-2 waf-level-2">
 	 	<input type="text" id="{id}textField8" data-type="textField" data-readOnly="false" data-password="false" data-multiline="false" data-lib="WAF" data-label-position="left" data-label="Answer 1" data-datapicker-on="true" data-datapicker-icon-only="false" data-constraint-top="true" data-constraint-right="false" data-constraint-left="true" data-constraint-bottom="false" data-binding="{id}setsWordGroups1.wordsAnswer1" class="waf-widget waf-textField "/>
  		<label id="{id}label8" for="{id}textField8" data-valign="middle" data-type="label" data-margin="5" data-lib="WAF" data-constraint-top="true" data-constraint-right="false" data-constraint-left="true" data-constraint-bottom="false" class="waf-widget waf-label waf-label-textField">Answer 1</label>
  		<input type="text" id="{id}textField9" data-type="textField" data-readOnly="false" data-password="false" data-multiline="false" data-lib="WAF" data-label-position="left" data-label="Answer 2" data-datapicker-on="true" data-datapicker-icon-only="false" data-constraint-top="true" data-constraint-right="false" data-constraint-left="true" data-constraint-bottom="false" data-binding="{id}setsWordGroups1.wordsAnswer2" class="waf-widget waf-textField "/>
@@ -65,36 +66,20 @@
  		<label id="{id}label10" for="{id}textField10" data-valign="middle" data-type="label" data-margin="5" data-lib="WAF" data-constraint-top="true" data-constraint-right="false" data-constraint-left="true" data-constraint-bottom="false" class="waf-widget waf-label waf-label-textField">Answer 3</label>
  		<input type="text" id="{id}textField13" data-type="textField" data-readOnly="false" data-password="false" data-multiline="false" data-lib="WAF" data-label-position="left" data-label="Answer 5" data-datapicker-on="true" data-datapicker-icon-only="false" data-constraint-top="true" data-constraint-right="false" data-constraint-left="true" data-constraint-bottom="false" data-binding="{id}setsWordGroups1.wordsAnswer5" class="waf-widget waf-textField "/>
  		<label id="{id}label15" for="{id}textField13" data-valign="middle" data-type="label" data-margin="5" data-lib="WAF" data-constraint-top="true" data-constraint-right="false" data-constraint-left="true" data-constraint-bottom="false" class="waf-widget waf-label waf-label-textField">Answer 5</label>
- 		<div type="checkbox" id="{id}checkbox12" data-type="checkbox" data-lib="WAF" data-label-position="right" data-label="Correct?" data-constraint-top="true" data-constraint-right="false" data-constraint-left="true" data-constraint-bottom="false" class="waf-widget waf-checkbox "></div>
- 	 		<label id="{id}label48" for="{id}checkbox12" data-valign="middle" data-type="label" data-margin="5" data-lib="WAF" data-constraint-top="true" data-constraint-left="true" class="waf-widget waf-label waf-label-checkbox">Correct?</label>
- 	 		<div type="checkbox" id="{id}checkbox10" data-type="checkbox" data-lib="WAF" data-label-position="right" data-label="Correct?" data-constraint-top="true" data-constraint-right="false" data-constraint-left="true" data-constraint-bottom="false" class="waf-widget waf-checkbox "></div>
- 	 		<label id="{id}label46" for="{id}checkbox10" data-valign="middle" data-type="label" data-margin="5" data-lib="WAF" data-constraint-top="true" data-constraint-left="true" class="waf-widget waf-label waf-label-checkbox">Correct?</label>
- 	 		<div id="{id}richText2" data-type="richText" data-target="_blank" data-plainText="true" data-overflow="Hidden" data-lib="WAF" data-label-position="left" data-label="" data-constraint-top="true" data-constraint-right="false" data-constraint-left="true" data-constraint-bottom="false" data-autoWidth="true" class="waf-widget waf-richText ">Test</div>
- 	 		<div type="checkbox" id="{id}checkbox11" data-type="checkbox" data-lib="WAF" data-label-position="right" data-label="Correct?" data-constraint-top="true" data-constraint-right="false" data-constraint-left="true" data-constraint-bottom="false" class="waf-widget waf-checkbox "></div>
- 	 		<label id="{id}label47" for="{id}checkbox11" data-valign="middle" data-type="label" data-margin="5" data-lib="WAF" data-constraint-top="true" data-constraint-left="true" class="waf-widget waf-label waf-label-checkbox">Correct?</label>
+ 		<div type="checkbox" id="{id}checkbox12" data-type="checkbox" data-lib="WAF" data-label-position="right" data-label="" data-constraint-top="true" data-constraint-right="false" data-constraint-left="true" data-constraint-bottom="false" class="waf-widget waf-checkbox "></div>
+ 	 		<div type="checkbox" id="{id}checkbox10" data-type="checkbox" data-lib="WAF" data-label-position="right" data-label="" data-constraint-top="true" data-constraint-right="false" data-constraint-left="true" data-constraint-bottom="false" class="waf-widget waf-checkbox "></div>
+ 	 		<div type="checkbox" id="{id}checkbox11" data-type="checkbox" data-lib="WAF" data-label-position="right" data-label="" data-constraint-top="true" data-constraint-right="false" data-constraint-left="true" data-constraint-bottom="false" class="waf-widget waf-checkbox "></div>
  	 		<div type="checkbox" id="{id}checkbox13" data-type="checkbox" data-lib="WAF" data-label-position="right" data-label="Correct?" data-constraint-top="true" data-constraint-right="false" data-constraint-left="true" data-constraint-bottom="false" class="waf-widget waf-checkbox "></div>
- 	 		<label id="{id}label49" for="{id}checkbox13" data-valign="middle" data-type="label" data-margin="5" data-lib="WAF" data-constraint-top="true" data-constraint-left="true" class="waf-widget waf-label waf-label-checkbox">Correct?</label>
- 	 		<div type="checkbox" id="{id}checkbox14" data-type="checkbox" data-lib="WAF" data-label-position="right" data-label="Correct?" data-constraint-top="true" data-constraint-right="false" data-constraint-left="true" data-constraint-bottom="false" class="waf-widget waf-checkbox "></div>
- 	 		<label id="{id}label50" for="{id}checkbox14" data-valign="middle" data-type="label" data-margin="5" data-lib="WAF" data-constraint-top="true" data-constraint-left="true" class="waf-widget waf-label waf-label-checkbox">Correct?</label>
+ 	 		<div type="checkbox" id="{id}checkbox14" data-type="checkbox" data-lib="WAF" data-label-position="right" data-label="" data-constraint-top="true" data-constraint-right="false" data-constraint-left="true" data-constraint-bottom="false" class="waf-widget waf-checkbox "></div>
  	 		<div id="{id}richText3" data-type="richText" data-target="_blank" data-plainText="true" data-overflow="Hidden" data-lib="WAF" data-label-position="left" data-label="" data-constraint-top="true" data-constraint-right="false" data-constraint-left="true" data-constraint-bottom="false" data-autoWidth="true" class="waf-widget waf-richText "></div>
  	 	 		<div id="{id}richText5" data-type="richText" data-target="_blank" data-plainText="true" data-overflow="Hidden" data-lib="WAF" data-label-position="left" data-label="" data-constraint-top="true" data-constraint-right="false" data-constraint-left="true" data-constraint-bottom="false" data-autoWidth="true" class="waf-widget waf-richText "></div>
  	 	 		<div id="{id}richText7" data-type="richText" data-target="_blank" data-plainText="true" data-overflow="Hidden" data-lib="WAF" data-label-position="left" data-label="" data-constraint-top="true" data-constraint-right="false" data-constraint-left="true" data-constraint-bottom="false" data-autoWidth="true" class="waf-widget waf-richText ">Question</div>
  	 	 		<input type="text" id="{id}textField34" data-type="textField" data-readOnly="false" data-password="false" data-multiline="false" data-lib="WAF" data-label-position="left" data-label="" data-datapicker-on="false" data-datapicker-icon-only="false" data-constraint-top="true" data-constraint-right="false" data-constraint-left="true" data-constraint-bottom="false" class="waf-widget waf-textField "/>
  	 	 		
+ 	 	 		<label id="{id}label7" data-type="label" data-lib="WAF" for="{id}checkbox13" data-valign="middle" data-margin="5" class="waf-widget waf-label waf-label-checkbox" data-constraint-left="true" data-constraint-top="true" data-constraint-bottom="false" data-constraint-right="false">Correct?</label>
  	 	 	</div>
  	 			<button id="{id}cloneButton" data-type="button" data-text="Clone" data-target="_blank" data-lib="WAF" data-constraint-top="true" data-constraint-right="false" data-constraint-left="true" data-constraint-bottom="false" data-action="simple" class="waf-widget waf-button "></button>
  	 	</div>
  		<div id="{id}wordErrorDiv" data-type="container" data-lib="WAF" data-label-position="top" data-label="" data-constraint-top="true" data-constraint-right="false" data-constraint-left="true" data-constraint-bottom="false" class="waf-widget waf-container waf-container-level-1 waf-level-1"></div>
  	</div>
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
 	</section>
